--- a/.gitignore
+++ b/.gitignore
@@ -128,4 +128,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-.vscode/
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+**/.history
