Added Qix and collision

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    // The following will hide the js and map files in the editor
     "files.exclude": {
+        "__pycache__": true,
         "*/*__pycache__": true,
     }
 }
