Updated VSCode pylint settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
     "files.exclude": {
         "__pycache__": true,
         "*/*__pycache__": true,
-    }
+    },
+    "python.linting.pylintArgs": [
+        "--generate-members",
+        "--max-line-length=200",
+        "--disable=C0111", // missing docstring
+        "--disable=C0411", // wrong import order
+        "--disable=R0902" // too many instance attributes
+    ],
 }
