--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
             "program": "main.py",
             "console": "integratedTerminal",
             "cwd": "${workspaceRoot}",
-            "env": { "PYTHONPATH": "${workspaceRoot}"}
+            "env": { 
+                "PYTHONPATH": "${workspaceRoot}"
+            }
         }
     ]
 }
